offcenter fix

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ main{
 /* Classlists */
 #cup.reveal{
     transform: scale(50%);
+    transform: translate(50%,50%);
 }
 
 @media (min-width: 900px) {
